# storage/api-docs/api-docs.json
@@ -62,6 +62,73 @@
                     }
                 }
             }
+        },
+        "/api/v1/statement/create": {
+            "post": {
+                "summary": "Create new statement",
+                "operationId": "f42c1750f24ab8185f81403a73cb61ed",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "title"
+                                ],
+                                "properties": {
+                                    "title": {
+                                        "description": "Statement title",
+                                        "type": "string",
+                                        "example": "My statement title"
+                                    },
+                                    "file": {
+                                        "description": "Uploaded file",
+                                        "type": "string",
+                                        "example": "file.pdf"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "description": "Statement Id",
+                                            "type": "integer",
+                                            "example": "1"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "description": "Enter your bearer token in the format **Bearer &lt;token&gt;**",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
+            }
         }
     }
 }
